---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
--- Linter settings ---
-linter.preview = disabled
+linter.preview = enabled

--- Summary ---
Removed: 2
Added: 4

--- Removed ---
S308 Use of `mark_safe` may expose cross-site scripting vulnerabilities
  --> S308.py:16:1
   |
16 | @mark_safe
   | ^^^^^^^^^^
   |


S308 Use of `mark_safe` may expose cross-site scripting vulnerabilities
  --> S308.py:36:1
   |
36 | @mark_safe
   | ^^^^^^^^^^
   |



--- Added ---
S308 Use of `mark_safe` may expose cross-site scripting vulnerabilities
  --> S308.py:16:2
   |
16 | @mark_safe
   |  ^^^^^^^^^
   |


S308 Use of `mark_safe` may expose cross-site scripting vulnerabilities
  --> S308.py:36:2
   |
36 | @mark_safe
   |  ^^^^^^^^^
   |


S308 Use of `mark_safe` may expose cross-site scripting vulnerabilities
  --> S308.py:42:5
   |
42 | map(mark_safe, [])
   |     ^^^^^^^^^
   |


S308 Use of `mark_safe` may expose cross-site scripting vulnerabilities
  --> S308.py:43:7
   |
43 | foo = mark_safe
   |       ^^^^^^^^^
   |
